[gd_scene load_steps=6 format=3 uid="uid://b1448adgu16mm"]

[ext_resource type="Script" path="res://Scripts/Nexus/EyeCandy/heart.gd" id="1_mtqoa"]
[ext_resource type="Texture2D" uid="uid://6gx3315brv7x" path="res://Assets/Art/EyeCandy/Heart/heart-off.png" id="2_0m25a"]
[ext_resource type="Texture2D" uid="uid://cp54w6q1dssj" path="res://Assets/Art/EyeCandy/Heart/heart-red.png" id="3_0vwdn"]
[ext_resource type="Texture2D" uid="uid://dcrqagya4hmad" path="res://Assets/Art/EyeCandy/Heart/heart-pink.png" id="4_henvh"]
[ext_resource type="Texture2D" uid="uid://cr3ac3tuw1uhs" path="res://Assets/Art/EyeCandy/Heart/heart-yellow.png" id="5_5xgh3"]

[node name="Heart" type="Node2D"]
script = ExtResource("1_mtqoa")

[node name="OffSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_0m25a")

[node name="RedSprite" type="Sprite2D" parent="."]
texture = ExtResource("3_0vwdn")

[node name="PinkSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_henvh")

[node name="YellowSprite" type="Sprite2D" parent="."]
texture = ExtResource("5_5xgh3")
